2010-12-21  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/lang/Class/IsAnonymousClass.java:
	Add tests for java.lang.Class#isAnonymousClass().

2010-12-13  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/lang/Class/GetSimpleName.java:
	Add tests for anonymous classes.

2010-12-12  Pekka Enberg  <penberg@kernel.org>

	* gnu/testlet/java/lang/Class/GetSimpleName.java:
	Add tests for primitive, Object, array and inner
	classes.

2010-12-01  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/TestSecurityManager.java:
	Fix whitespace.
	* gnu/testlet/java/security/Policy/setPolicy.java:
	Test that the default security manager actually
	uses the currently established policy.  Our
	TestSecurityManager relies on this.

2010-11-24  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/security/ProtectionDomain/Security.java
	New test to ensure toString() does a getPolicy
	check when not in debugging mode.

2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/io/File/security.java:
	Add security manager checks for deleteOnExit,
	exists, canRead, isFile, isDirectory, isHidden,
	lastModified, length, canWrite, mkdir, mkdirs,
	setLastModified.

2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* gnu/testlet/java/util/logging/LogManager/Security.java:
	Add test for addPropertyChangeListener and
	removePropertyChangeListener SecurityManager checks.

2010-11-15  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* Makefile.in,
	* aclocal.m4,
	* configure: Regenerated.
	* gnu/testlet/java/io/ObjectOutputStream/security.java:
	Add tests for ObjectOutputStream(OutputStream)
	as reported in PR classpath/42390.

2010-05-11  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/43536
	* gnu/testlet/java/util/Collection/Test.java:
	New test ensuring all Collection implementations meet
	the requirements of remove(Object).
